--- a/estilos.css
+++ b/estilos.css
@@ -63,11 +63,10 @@ header {
 .hero {
     width: 100%;
     background-image: url('path-to-your-hero-image.jpg');
-    background-size: cover;
+    background-size: cover; 
     background-position: center;
     color: white;
     text-align: center;
-    padding: 4rem 1rem;
 }
 
 .hero a{
@@ -94,7 +93,8 @@ header {
     z-index: 2;
     background-image: url(img/electrica2.jpg);
     background-position: 0 70%;
-    font-size: 2em;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .hero_container img {
